# Basketball-Scoring-Analysis

./: .env  .gitignore  README.md  main.py  pyproject.toml  test.ipynb
.ipynb_checkpoints/: test-checkpoint.ipynb
basketball_homography/: court_homography.py  court_template.py  court_visualizer.py  demo.py  pipeline.py
draw/: draw.py  utils.py
infering/: __init__.py  infer.py
presaved/: court.pkl  player_ball.pkl  teams.pkl
scoring_system/: __init__.py  find_events.py  scoring.py  utils.py
utils/: __init__.py  helper.py  interpolation.py
visualizations/: __init__.py  court.py  court_tempelete.py  game_momentum.py  homography.py  mini_maps.py  momunum_plot.py  scoring_effects.py  scoring_effects_function.py  team_stats.py  utils.py
