[project]
name = "basketball"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easyocr>=1.7.2",
    "fastapi>=0.138.2",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.4",
    "pydantic>=2.13.4",
    "supervision",
    "torch",
    "transformers>=5.12.1",
    "uvicorn>=0.49.0",
]
